# KnightLab

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TASKS.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: bootstrap-web-beta-repair.yml  bootstrap-web-beta.yml  bootstrap.yml  ci.yml
bootstrap/: part-01  part-03  trigger.txt
bootstrap/web-beta-0.3/: part-00  part-02  part-03  part-04  part-05  part-06  part-08-00  part-08-02  part-08-03
docs/: AGENT_PROMPT.md  ANALYSIS_AND_ACCURACY.md  ARCHITECTURE.md  DATA_MODEL.md  PRODUCT_SPEC.md  STOCKFISH_INTEGRATION.md  TESTING.md
public/: test.html
release-bootstrap/: part-000
release-package/: part-000  part-001  part-004  part-006
scripts/: prepare-sites-output.mjs  static-site-worker.js  sync-stockfish.mjs
specs/20260721-stockfish-phase1/: plan.md  spec.md  tasks.md
specs/20260722-phase1-clocks/: plan.md  spec.md  tasks.md
specs/20260722-phase1-completion-actions/: plan.md  spec.md  tasks.md
specs/20260722-phase1-engine-settings/: plan.md  spec.md  tasks.md
src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  pwa.test.ts  pwa.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  stockfish.rs
src-tauri/tests/: analysis_contract.rs  database_contract.rs  retry_persistence_contract.rs  review_persistence_contract.rs  stockfish_contract.rs  stockfish_smoke.rs  tactics_persistence_contract.rs
(+196 files in other folders)
