[package]
name = "knightclub"
version = "0.2.0"
description = "A private, offline-first chess studio"
authors = ["KnightClub contributors"]
license-file = "../LICENSE"
repository = "https://github.com/Dingding-leo/KnightClub"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "knightclub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
